Bug 297697. ISimpleDOMText::get_unclippedSubstringBounds() always gives same top of rect for all lines of text. r=timeless, sr=bz, a=bsmedberg